Updating to 81bb14938a6285a1e526eb6384ea856e2e7ee7af.

--- a/ocl3/index.html
+++ b/ocl3/index.html
@@ -213,7 +213,7 @@
 
 <p>Unfortunately, the realities are not quite so straightforward. Different browsers will render CSS with subtle differences. <strong>Just because your site looks good in Chrome, doesn&#8217;t mean it will look good in Internet Explorer.</strong> Making your site look good (or even presentable) in multiple browsers takes time, effort and experience. You might be the sort of person who relishes this sort of challenge - if so, great! If not, help is at hand &#8230;</p>
 
-<p><a href='http://twitter.github.com/bootstrap/'>Twitter Bootstrap</a> is set of CSS (&amp; Javascript) files, released by the makers of Twitter. It makes a lot easier to produce websites that won&#8217;t make you want to sick up into your mouth everytime you look at them - and that look the same in all browsers. We&#8217;ll now look at adding Twitter Bootstrap to a page.</p>
+<p><a href='http://getbootstrap.com'>Twitter Bootstrap</a> is set of CSS (&amp; Javascript) files, released by the makers of Twitter. It makes a lot easier to produce websites that won&#8217;t make you want to sick up into your mouth everytime you look at them - and that look the same in all browsers. We&#8217;ll now look at adding Twitter Bootstrap to a page.</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
@@ -270,7 +270,7 @@
 	
 
 		<h2>Bootstrap layout</h2>
-		<p>Bootstrap gives you several options on how to layout your page. To find out more take a look at the <a href='http://localhost:9001/css/#grid'>Grid system docs</a> on the Bootstrap site. Some of these options will work out-of-the-box with <em>responsive design</em> - so that you can create a single html page which will look good whether viewed on a laptop, tablet or phone.</p>
+		<p>Bootstrap gives you several options on how to layout your page. To find out more take a look at the <a href='http://getbootstrap.com/css/#grid'>Grid system docs</a> on the Bootstrap site. Some of these options will work out-of-the-box with <em>responsive design</em> - so that you can create a single html page which will look good whether viewed on a laptop, tablet or phone.</p>
 
 <p>We&#8217;ll just look at a few of the most important layout options here:</p>
 
