Updating to f60a53f551243ce3145bdf009a5013d7c61934ff.

--- a/ocl2/index.html
+++ b/ocl2/index.html
@@ -345,14 +345,7 @@ $ git push -u origin master</code></pre>
 </li>
 
 <li>
-<p>Save the file, add and commit it (making sure you&#8217;re in the <code>html2</code> directory):</p>
-
-<pre><code> $ git add --all
- $ git commit -m &quot;Made h1 red.&quot;</code></pre>
-</li>
-
-<li>
-<p>Continue with the exercise until <code>exercise1.html</code> looks like <code>exercise1_solution.png</code>. After each change, add and commit your work to the git repo.</p>
+<p>Continue with the exercise until <code>exercise1.html</code> looks like <code>exercise1_solution.png</code>.</p>
 </li>
 </ol>
 </div>
