Updating to f60a53f551243ce3145bdf009a5013d7c61934ff.

--- a/html_course_plan.html
+++ b/html_course_plan.html
@@ -102,15 +102,19 @@
 
 <p>Github collaboration - mostly as is Maybe do the collaboration exercise in pairs</p>
 
+<p>Homework:</p>
+
 <h3 id='session_5'>Session 5</h3>
+
+<p>Revisiting the web request HTML verbs http://requestb.in/</p>
+
+<p>HTML forms Continue with project</p>
+
+<h3 id='session_6'>Session 6</h3>
 
 <p>Google Analytics Introduce project</p>
 
 <p>Hmwk: google analytics on own site Hmwk: get started on project - setup group repository, make a basic site</p>
-
-<h3 id='session_6'>Session 6</h3>
-
-<p>HTML forms Continue with project</p>
 
 <h3 id='session_7'>Session 7</h3>
 
