--- a/ocl.html
+++ b/ocl.html
@@ -37,9 +37,9 @@
 
 <li><a href='/ocl2'>2: Git and CSS</a></li>
 
-<li><a href='/ocl3'>3: Site deployment</a></li>
+<li><a href='/ocl3'>3: Twitter Bootstrap</a></li>
 
-<li>4: GitHub and collaboration</li>
+<li><a href='/ocl4'>4: GitHub and collaboration</a></li>
 
 <li>5: Collecting analytics</li>
 
