--- a/ocl2/index.html
+++ b/ocl2/index.html
@@ -232,9 +232,10 @@ Date:   Tue Jul 2 14:19:30 2013 +0100
 </li>
 
 <li>
-<p>Commit your changes but forget the <code>-m</code>:</p>
+<p>Add and commit your changes but forget the <code>-m</code>:</p>
 
-<pre><code> $ git commit</code></pre>
+<pre><code> $ git add --all
+ $ git commit</code></pre>
 </li>
 
 <li>
