--- a/ocl4/index.html
+++ b/ocl4/index.html
@@ -78,9 +78,9 @@
 </li>
 
 <li>
-<p>Clone the project <a href=''>https://github.com/TomClose/cfg_first_site.git</a>:</p>
+<p>Clone the project <a href=''>https://github.com/tomclose/cfgmt2013_first_site</a>:</p>
 
-<pre><code> $ git clone https://github.com/TomClose/cfg_first_site.git toms_site</code></pre>
+<pre><code> $ git clone hthttps://github.com/tomclose/cfgmt2013_first_site toms_site</code></pre>
 </li>
 </ol>
 </div>
@@ -324,7 +324,7 @@ git push -u origin master</code></pre>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>Tell us about your first site by filling in <a href='https://docs.google.com/forms/d/1V8wA--rmXQ8KvPmpooLZEZPwl7Vp64-XRPlOea9rRlU/viewform'>this form</a>.</p>
+<p>Tell us about your first site by filling in <a href='https://docs.google.com/forms/d/1V8wA--rmXQ8KvPmpooLZEZPwl7Vp64-XRPlOea9rRlU/viewform'>this form</a>. If you&#8217;re still having problems getting it to display online or pointing your url to it, ask in the forum!</p>
 </div>
 <h3 id='work_on_your_group_cheatsheet'>Work on your group cheatsheet</h3>
 <div class='exercise alert alert-info'><strong>
