--- a/ocl4/index.html
+++ b/ocl4/index.html
@@ -78,7 +78,7 @@
 </li>
 
 <li>
-<p>Clone the project <a href=''>https://github.com/tomclose/cfgmt2013_first_site</a>:</p>
+<p>Clone the project <a href='https://github.com/tomclose/cfgmt2013_first_site'>https://github.com/tomclose/cfgmt2013_first_site</a>:</p>
 
 <pre><code> $ git clone hthttps://github.com/tomclose/cfgmt2013_first_site toms_site</code></pre>
 </li>
