Updating to f2845c1a6ce6e4cdcd81941d4ac51a1a47e2cb18.

--- a/ocl4/index.html
+++ b/ocl4/index.html
@@ -80,7 +80,7 @@
 <li>
 <p>Clone the project <a href='https://github.com/tomclose/cfgmt2013_first_site'>https://github.com/tomclose/cfgmt2013_first_site</a>:</p>
 
-<pre><code> $ git clone hthttps://github.com/tomclose/cfgmt2013_first_site toms_site</code></pre>
+<pre><code> $ git clone https://github.com/tomclose/cfgmt2013_first_site toms_site</code></pre>
 </li>
 </ol>
 </div>
