Updating to f2845c1a6ce6e4cdcd81941d4ac51a1a47e2cb18.

--- a/ocl3/index.html
+++ b/ocl3/index.html
@@ -300,7 +300,7 @@
     <span class='nt'>&lt;/div&gt;</span>
 <span class='nt'>&lt;/div&gt;</span>
 </code></pre></div>
-<p>The number after the <code>col-sm-</code> determines how many of the 12 grid columns that page column takes up. The <code>sm</code> bit determines the width at which the columns will collapse on top of each other (which is useful when viewing your site on a phone). For more information see the <a href='http://localhost:9001/css/#grid'>Grid system docs</a>.</p>
+<p>The number after the <code>col-sm-</code> determines how many of the 12 grid columns that page column takes up. The <code>sm</code> bit determines the width at which the columns will collapse on top of each other (which is useful when viewing your site on a phone). For more information see the <a href='http://getbootstrap.com/css/#grid'>Grid system docs</a>.</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
