--- a/ocl4/index.html
+++ b/ocl4/index.html
@@ -275,7 +275,7 @@ git push -u origin master</code></pre>
 </li>
 
 <li>
-<p>Person B should then download <a href='http://twitter.github.io/bootstrap/'>Twitter Bootstrap</a> and put it in the <code>group_cheatsheet</code> folder</p>
+<p>Person B should then download <a href='http://getbootstrap.com/'>Twitter Bootstrap</a> and put it in the <code>group_cheatsheet</code> folder</p>
 </li>
 
 <li>
