Updating to f2845c1a6ce6e4cdcd81941d4ac51a1a47e2cb18.

--- a/hmwk00/index.html
+++ b/hmwk00/index.html
@@ -136,7 +136,7 @@
 <ol>
 <li>Using your GitHub account, sign up for the course forum at <a href='http://chat.code61.org/'>chat.code61.org/</a>.</li>
 
-<li>Introduce yourself in the &#8216;Code First:Girls Oxford MT 2013 course&#8217; post.</li>
+<li>Introduce yourself in the post for your course.</li>
 </ol>
 </div>
 <h3 id='what_is_github'>What is GitHub?</h3>
