--- a/ocl4/index.html
+++ b/ocl4/index.html
@@ -169,6 +169,18 @@ $ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 <pre><code> $ git add --all
  $ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 </li>
+
+<li>
+<p>To have a look at what you&#8217;ve just done:</p>
+
+<pre><code> $ gitk --all</code></pre>
+
+<p>or</p>
+
+<pre><code> $ git log --pretty --graph --oneline</code></pre>
+
+<p>You should see how the two versions branched and came back together.</p>
+</li>
 </ol>
 </div>
 	</div>
