Updating to f2845c1a6ce6e4cdcd81941d4ac51a1a47e2cb18.

--- a/ocl.html
+++ b/ocl.html
@@ -41,7 +41,7 @@
 
 <li><a href='/ocl4'>4: GitHub and collaboration</a></li>
 
-<li>5: Collecting analytics</li>
+<li><a href='/ocl5'>5: Gathering input</a></li>
 
 <li>6: Gathering input</li>
 
