--- a/ocl_project/index.html
+++ b/ocl_project/index.html
@@ -56,7 +56,7 @@
 	
 
 		<h2>Task Overview</h2>
-		<p>Over the next two weeks you will be working in teams of 3 or 4 to produce a landing page for an extra-curricular coding course to be offered at a local university. The aim of the landing page will be to advertise the course and to collect the email addresses of interested participants.</p>
+		<p>Over the next two weeks you will be working in teams of 2 or 3 to produce a landing page for a future version of this coding course. The aim of the landing page will be to advertise the course and to collect the email addresses of interested participants.</p>
 
 <h3 id='learning_outcomes'>Learning outcomes</h3>
 
@@ -69,18 +69,10 @@
 
 <li>Practise collaborative coding.</li>
 
-<li>Learn how to put up a simple webform that submits to a Google doc.</li>
+<li>Practise putting up a simple webform that submits to a Google doc.</li>
 
 <li>Learn about basic web analytics.</li>
-
-<li>Learn how to perform a basic A/B test to optimize your landing page.</li>
 </ul>
-
-<h3 id='is_this_for_real'>Is this for real?</h3>
-
-<p>Yes. EntrepreneurFirst is investigating the possibility of putting on courses similar to CodeFirst: Girls at a number of universities across the country. Putting up a course landing page and collecting the email addresses of those interested will be a first step in validating the assumption that there is demand for such courses.</p>
-
-<p>We will use the best landing pages to advertise the course at chosen universities!</p>
 	</div>
 
 	
@@ -102,7 +94,7 @@
 
 <p>The course being offered is an introduction to HTML, CSS and git. It is basically the same material that you have covered up til now in Web Fundamentals 1-4.</p>
 
-<p>It&#8217;s up to you to present this content in the way you think would be most compelling to someone in your position 4 weeks ago. For example you could focus on the technologies they will learn, or you might want to focus on the things they&#8217;ll be able to do. Totally up to you!</p>
+<p>It&#8217;s up to you to present this content in the way you think would be most compelling to someone in your position when you signed up. For example you could focus on the technologies they will learn, or you might want to focus on the things they&#8217;ll be able to do. Totally up to you!</p>
 
 <h3 id='the_format'>The format</h3>
 
@@ -111,7 +103,7 @@
 <ul>
 <li>attendees must commit to making every single session</li>
 
-<li>they must commit to putting in 3 hours work outside the course each week</li>
+<li>they must commit to putting in 4 hours work outside the course each week</li>
 </ul>
 
 <p>As the course is being offered for free it&#8217;s important to get this in somewhere, though it could be on the sign-up form.</p>
