Updating to f2845c1a6ce6e4cdcd81941d4ac51a1a47e2cb18.

--- a/ocl5/index.html
+++ b/ocl5/index.html
@@ -443,7 +443,7 @@
 <ol>
 <li>Form teams of 2-3 to work together.</li>
 
-<li>Read <a href='/ocl_project'>The Brief</a>.</li>
+<li>Read <a href='/ocl_project'>The Brief</a>, which directs you to build a landing page for the coding course. If you have a different idea that you&#8217;d rather work on, that&#8217;s fine - it just needs to be a landing page for something integrated with a form to collect people&#8217;s details.</li>
 
 <li>Make a start on your HTML, CSS and site copy. You&#8217;ll have the next two homeworks to work on this, but the more you get done now the better!</li>
 </ol>
