--- a/ocl.html
+++ b/ocl.html
@@ -43,10 +43,12 @@
 
 <li><a href='/ocl5'>5: Gathering input</a></li>
 
-<li>6: Gathering input</li>
+<li>6: Analytics</li>
 
 <li>7: What next?</li>
 </ul>
+
+<p><a href='/ocl_project'>Course project</a></p>
 
 <h4 id='example_pages'>Example pages</h4>
 
