Updating to f2845c1a6ce6e4cdcd81941d4ac51a1a47e2cb18.

--- a/ocl5/index.html
+++ b/ocl5/index.html
@@ -420,7 +420,7 @@
 </code></pre></div>
 <p>There are several other options for html input types. For a complete list see <a href='http://www.w3schools.com/tags/tag_input.asp'>here</a>. I don&#8217;t know how well supported these &#8216;other&#8217; types are across browsers - I think they&#8217;re probably new in <a href='http://www.html5rocks.com/en/'>html5</a>. Probably worth testing in multiple browsers (or googling to find out which browsers support them) before you start relying on them!</p>
 
-<p>For more information about styling forms have a look at the <a href='http://twitter.github.io/bootstrap/base-css.html#forms'>Twitter Bootstrap forms section</a>.</p>
+<p>For more information about styling forms have a look at the <a href='http://getbootstrap.com/css/#forms'>Twitter Bootstrap forms section</a>.</p>
 	</div>
 
 	
