Updating to 3062a30654c9ecdc91dda94e916bf69a52017a03.

--- a/ocl.html
+++ b/ocl.html
@@ -43,7 +43,7 @@
 
 <li><a href='/ocl5'>5: Gathering input</a></li>
 
-<li>6: Analytics</li>
+<li><a href='/ocl6'>6: Analytics</a></li>
 
 <li>7: What next?</li>
 </ul>
