Updating to 3062a30654c9ecdc91dda94e916bf69a52017a03.

--- a/ocl6/index.html
+++ b/ocl6/index.html
@@ -47,6 +47,10 @@
 		<li><a href="#3_setting_a_goal" data-toggle="tab">Setting up goals </a></li>
 		
 	
+		
+		<li><a href="#4_homework" data-toggle="tab">Homework </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
@@ -158,6 +162,26 @@
 
 <li>Push your code to github. See if you can see your goal being met on the realtime tab.</li>
 </ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="4_homework">
+	
+
+		<h2>Homework</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Watch the <a href='http://500hats.typepad.com/500blogs/2007/09/startup-metrics.html'>startup metrics for pirates talk</a>.</p>
+</div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Set up google analytics for your personal webpage.</p>
+</div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Finish your landing page!</p>
 </div>
 	</div>
 
