--- a/ocl7/index.html
+++ b/ocl7/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>ocl7</title>
+  <title>Web Fundamentals 7</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -29,18 +29,14 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>ocl7 <small></small></h1>
+  <h1>Web Fundamentals 7 <small>A few extras</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#1_cloudflare" data-toggle="tab"> </a></li>
-		
-	
-		
-		<li><a href="#2_jquery" data-toggle="tab">jQuery </a></li>
+		<li class="active"><a href="#2_jquery" data-toggle="tab">jQuery </a></li>
 		
 	
 		
@@ -52,15 +48,7 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="1_cloudflare">
-	
-
-		<h2></h2>
-		
-	</div>
-
-	
-	<div class="tab-pane " id="2_jquery">
+	<div class="tab-pane active" id="2_jquery">
 	
 
 		<h2>jQuery</h2>
@@ -176,8 +164,6 @@
 </ol>
 
 <p>People will be able to help you better if they can see the code themselves. Often they will respond with a working jsFiddle (as in <a href='http://stackoverflow.com/questions/11489037/add-and-remove-attribute-with-jquery'>this example</a>)</p>
-
-<p>http://www.codecademy.com/tracks/jquery</p>
 	</div>
 
 </div>
