Updating to 3062a30654c9ecdc91dda94e916bf69a52017a03.

--- a/ocl.html
+++ b/ocl.html
@@ -45,7 +45,7 @@
 
 <li><a href='/ocl6'>6: Analytics</a></li>
 
-<li>7: What next?</li>
+<li><a href='/ocl7'>7: What next?</a></li>
 </ul>
 
 <p><a href='/ocl_project'>Course project</a></p>
